syntax = "proto2";

option java_outer_classname = "OaxRtbProto";
option java_package = "top.openadexchange.rtb.proto";

package top.openadexchange.rtb.proto;

//竞价请求对象
message BidRequest {
  required string id = 1; //竞价请求id, 由adx自动生成

  repeated Imp imp = 2;
  //站点对象, 网站流量使用
  optional Site site = 3;
  //移动应用，移动app流量使用
  optional App app = 4;
  //设备对象
  optional Device device = 5;
  //用户对象
  optional User user = 6;

  optional bool test = 7;
  //竞价方式：1-一价；2-二价
  optional uint32 at = 8;
  //扩展字段
  //map<string, string> ext = 9;

  //保留扩展，扩展协议字段编号
  extensions 200 to 299;

  message Imp {
    required string id = 1;
    //横幅广告请求
    optional Banner banner = 2;
    //视频广告请求
    optional Video video = 3;
    //原生广告请求，和java系统关键字native有冲突，所以这里直接使用nativeAd
    optional NativeSpec native_spec = 13;
    //音频广告请求
    optional Audio audio = 14;

    optional Pmp pmp = 6;            //私有竞价相关定义
    optional string tagid = 7;       //媒体广告位id，由Ad-Exchange定义
    optional float bid_floor = 8;     //媒体广告位底价
    optional string bid_floor_cur = 9; //USD or CNY
    //是否使用https, 0-不启用安全链接, 1-启用安全链接
    optional uint32 secure = 10;
    optional bool is_native_ad = 12; //是否原生广告，原生广告dsp平台可以根据tagid来进行匹配
    //map<string, string> ext = 11;    //扩展字段

    //protobuf扩展
    extensions 200 to 299;

    //图片广告位请求定义
    message Banner {
      optional uint32 w = 1;       //banner广告位宽
      optional uint32 h = 2;       //banner广告位高
      optional uint32 pos = 3;     //广告位置
      repeated string mimes = 4;   //广告位支持mime类型,如:image/jpeg
      //协议扩展定义
      extensions 200 to 299;
    }

    //视频广告位请求定义
    message Video {
      repeated string mimes = 1;        //支持媒体类型
      optional uint32 min_duration = 2;  //视频最小时长
      optional uint32 max_duration = 3;  //视频最大时长
      optional bool skippable = 6; //是否允许跳过
      optional uint32 skip_min = 7; //跳过最小时长
      optional uint32 skip_after = 8; //几秒后可跳过
      optional uint32 w = 4;    //视频宽
      optional uint32 h = 5;    //视频高

      //协议保留扩展
      extensions 200 to 299;
    }

    //音频广告位请求定义
    message Audio {
      repeated string mimes = 1;        //支持媒体类型
      optional uint32 min_duration = 2;  //音频最小时长
      optional uint32 max_duration = 3;  //音频最大时长
    }

    //原生广告这个地方和openRTB差异较大，并不会将原生广告的样式定义在这里，这样对于dsp平台非常不友好，匹配难度极高
    //这里只定义原生广告位模板id，dsp平台根据这个模板id来进行匹配，匹配规则由dsp平台自己定义
    message NativeSpec {
      //原生广告位规格id, 同一个原生广告广告位同时可能支持多种广告样式
      repeated string template_id = 1;
    }

    //私有竞价定义
    message Pmp {
      repeated Deal deals = 1;
      //协议扩展定义
      extensions 200 to 299;

      message Deal {
        //私有化交易id
        required string id = 1;
      }
    }
  }
  //end imp

  message App {
    optional string id = 1;        //appid, 由Ad-Exchange定义
    optional string name = 8;
    optional string bundle = 2;    //应用包名，对安卓是应用包名，如：com.iqiyi，ios为appstore id
    repeated string cat = 3;           //App分类列表
    optional string ver = 4;           //App版本
    optional Content content = 6;      //App内容相关
    optional string keywords = 7;      //app关键字，多个关键字逗号分隔

    extensions 200 to 299;
  }

  //站点对象定义
  message Site {
    optional string id = 1;            //站点id
    optional string name = 2;          //站点名称
    optional string domain = 3;        //站点域名
    repeated string cat = 4;           //站点分类

    optional Content content = 8;      //网站内容
    optional string keywords = 9;      //网站关键字，多个关键字逗号分隔

    extensions 200 to 299;
  }

  message Content {
    optional string id = 1;
    optional string title = 2;
    optional string keywords = 3;
  }

  //设备对象
  message Device {
    optional string ua = 1;          //设备user-agent
    optional Geo geo = 2;            //地理位置对象
    optional string ip = 3;          //设备ip
    optional string ipv6 = 4;        //ipv6地址
    optional uint32 device_type = 5;  //设备类型, 1-phone,2-pad,3-pc,4-tv
    optional string make = 6;        //设备制造商
    optional string model = 7;       //设备型号, 如：iPhone
    optional string os = 8;          //操作系统，如：ios/Android
    optional string osv = 9;         //操作系统版本
    optional string carrier = 10;    //运营商, 0-未知,1-移动,2-联通,3-电信

    optional uint32 connection_type = 11; //网络连接类型, 1-wifi; 2-2G;3-3G;4-4G;5-5G; 0-未知
    optional string ifa = 12;      //明文设备码，如安卓的imei或ios的idfa
    optional string didmd5 = 13;   //md5设备码
    optional string mac = 14;      //mac地址明文
    optional string macmd5 = 15;   //md5 mac地址
    optional string adid = 16; //安卓id
    optional uint32 h = 17; //设备屏幕高
    optional uint32 w = 18; //设备屏幕宽

    //协议保留扩展
    extensions 200 to 299;
  }

  message Geo {
    optional float lat = 1;       //纬度
    optional float lon = 2;       //经度
    optional string country = 3;  //国家编码
    optional string region = 4;   //地区编码
    optional string city = 5;     //城市编码
    //6位地域码
    optional uint32 area_code = 6; //6位地域码

    extensions 200 to 299;
  }

  message User {
    optional string id = 1;    //Ad-Exchange用户标识

    extensions 200 to 299;
  }
}

message BidResponse {
  //竞价请求id, 和BidRequest的id保持一致
  required string id = 1;
  repeated SeatBid seatbid = 2;    //针对单个广告位的竞价响应
  required string bidid = 3;       //dsp生成的竞价响应id

  //协议保留扩展
  extensions 200 to 299;

  message NativeAd {
    //原生广告模板id
    optional string template_id = 1;
    map<string, string> assets = 2;
  }

  message SeatBid {
    repeated Bid bid = 1;        //同一个广告位的多个出价
    optional string seat = 2;    //广告位名称

    message Bid {
      required string id = 1;        //dsp平台参与出价id
      required string impid = 2;     //曝光id, 关联竞价请求中Imp中id
      required float price = 3;      //广告出价, 单位是分
      required string crid = 4;      //dsp平台创意id
      optional string dealid = 5;    //请求pmp dealid

      optional string nurl = 20; //如果不填写则不会发送winNotice通知
      repeated string imp_trackers = 6; //曝光监测
      repeated string clk_trackers = 7; //点击监测

      optional string ldp = 8; //广告落地页
      optional string creative_url = 9; //广告创意地址
      optional uint32 click_type = 10; //点击类型：1-浏览器打开  2-安卓应用下载  3-deeplink，4-ios应用

      //安卓应用包名或者ios的appid， 点击类型为安卓应用下载和ios应用时候，bundle必填
      optional string bundle = 11;
      //optional string adm = 12;    //动态广告代码
      optional NativeAd nativeAd = 13; //原生广告响应
      optional string app_download_url = 14; //应用下载地址
      optional string app_name = 15; //应用名称
      optional string deeplink = 16; //deeplink链接

      //协议保留扩展
      extensions 200 to 299;
    }
  }
}